fixed scroll spacing for fridge items

--- a/fridge.css
+++ b/fridge.css
@@ -127,7 +127,7 @@ select {
   height: 255px;
   overflow-y: auto;
   overflow-x: hidden;
-  margin-right: 35px;
+  margin-right: 25px;
   margin-left: 40px;
 }
 
